--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +10,116 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+} */
+
+
+
+.mainDiv{
+  height: 500px;
+  /* background-color: aqua; */
+  background-image: url('https://www.maddyness.com/uk/app/uploads/2020/01/ross-parmly-rf6ywHVkrlY-unsplash.jpg');
 }
+
+.img{
+  height: 30px;
+  width: 150px;
+  margin: 5px;
+
+}
+
+.header{
+  display: flex;
+  justify-content: space-between;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  margin-bottom: 20px;
+  padding-top: 10px;
+  padding-left: 10px;
+  background-color: white;
+
+}
+.title{
+  color: rgb(1, 9, 62);
+}
+.title2{
+  font-size: 10px;
+  padding-left: 82px;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+
+}
+
+.container{
+  /* background-color: white; */
+  height: 100px;
+  display: flex;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+
+
+}
+
+.containerButton{
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+
+}
+
+.filters{
+  margin-left: 50px;
+  padding-left: 20px;
+  
+}
+
+.filterResults{
+  font-size: 15px;
+}
+
+.labelCheckBox1{
+  font-size: 10px;
+}
+
+.checkBox1{
+transform: scale(0.7);
+}
+
+.labelPriceRange{
+  font-size: 10px;
+}
+
+.inputMin{
+  height: 15px;
+  width: 50px;
+  font-size: 10px;
+
+}
+
+.labelPriceRangeTo{
+  font-size: 10px;
+}
+
+.inputMax{
+  height: 15px;
+  width: 50px;
+font-size: 10px;
+}
+
+
+
+
+
+.flightsList{
+  margin: 30px;
+  color:rgb(211, 215, 213);
+  background-color: rgb(0, 4, 126);
+  width:fit-content;
+  
+}
+
+.borderTo{
+border-color: rgba(1, 5, 116, 0.709);}
+
+.containerForm{
+
+}
+
+
