--- a/src/index.css
+++ b/src/index.css
@@ -74,8 +74,8 @@ code {
   display: flex;
   font-size: 17px;
   margin-top: 1px;
-  margin-left: 40px;
-  margin-bottom: 10px;
+  margin-left: 100px;
+  margin-bottom: 25px;
   color:rgb(211, 215, 213);
 }
 
@@ -116,9 +116,9 @@ margin-bottom: 10px;
 .detailsDescription{
   display: flex;
   font-size: 10px;
-  margin-top: 30px;
+  /* margin-top: 30px; */
   margin-left: 110px;
-  margin-right: 40px;
+  margin-right: 60px;
   color:rgb(223, 244, 174);
   /* background-color: rgb(0, 4, 126); */
   /* width:fit-content; */
@@ -133,12 +133,26 @@ margin-bottom: 10px;
   font-size: 17px;
   margin-top: 30px;
   margin-left: 30px;
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
   color:rgb(211, 215, 213);
   /* background-color: rgb(0, 4, 126); */
   /* width:fit-content; */
   justify-content: space-around;
   
+}
+
+.flightsListReturn{
+  background-color: rgba(37, 40, 235, 0.866);
+
+  display: flex;
+  font-size: 17px;
+  margin-top: 30px;
+  margin-left: 30px;
+  margin-bottom: 10px;
+  color:rgb(211, 215, 213);
+  /* background-color: rgb(0, 4, 126); */
+  /* width:fit-content; */
+  justify-content: space-around;
 }
 
 .flightsWrapper {
@@ -149,10 +163,21 @@ margin-bottom: 10px;
 .flightsConnectionList{
   font-size: 13px;
 margin-left: 40px;
-  color:rgb(0, 0, 0);
-  background-color: rgba(140, 206, 232, 0.866);
+  color:rgb(248, 232, 217);
+  background-color: rgba(128, 124, 248, 0.533);
+
   width:fit-content;
 }
+
+.flightsConnectionListReturn{
+  font-size: 13px;
+  margin-left: 40px;
+    color:rgb(248, 235, 217);
+    background-color: rgba(128, 124, 248, 0.335);
+  
+    width:fit-content;
+}
+
 /* 
 .borderTo{
 border-color: rgba(1, 5, 116, 0.709);} */
